2003-05-11  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6alpha1. There was a problem
	with file descriptors in 1.0.5; some debugging information
	has been added to this release. The problem should be fixed
	by alpha2.

2003-05-08  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.5 (same code-base as rc2).

2003-05-08  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/world: Added an object database to Twisted.  This is
	still highly experimental!

2003-5-6  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/trial/reporter.py twisted/scripts/trial.py: Add --timing
	option to make the reporter output wall-clock time.

2003-05-05  Brian Warner  <warner@lothar.com>

	* setup.py (setup_args): s/licence/license/, preferred in python-2.3

2003-05-05  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.5rc1.

	* .: Releasing Twisted 1.0.5rc2 (only a Debian build problem fixed).

2003-05-05  Brian Warner  <warner@lothar.com>

	* twisted/trial/reporter.py: remove ResultTypes, it doesn't really
	accomplish its goal

	* twisted/trial/unittest.py: move log.startKeepingErrors() from
	top-level to TestSuite.run(). This fixes the problem of errors
	being eaten by code which imports unittest for other reasons (like
	to use trial.remote reporting)

2003-05-04  Brian Warner  <warner@lothar.com>

	* twisted/trial/reporter.py (ResultTypes): export legal values for
	Reporter.reportResults() so remote reporters know what to expect

2003-05-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/tcp.py, twisted/internet/ssl.py: TLS support
	added to TCP connections; startTLS() method added to transport
	objects to switch from unencrypted to encrypted mode.

2003-05-02  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/protocol.py: Added continueTrying attribute to
	ReconnectingClientFactory, and increased the number of states where