@@ -1,3 +1,14 @@
+2003-5-12  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/lore/default.py twisted/lore/latex.py
+	  twisted/lore/lint.py twisted/lore/math.py twisted/lore/tree.py
+	  twisted/lore/lmath.py twisted/lore/slides.py:
+	  Added indexing support to LaTeX and lint, and made sure the
+	  config dictionary is passed to the tree processors [this is an
+	  API change which might have effect on Lore extensions!]. Rename
+	  math to lmath, to avoid some corner-case bugs where it gets mixed
+	  with the Python standard module "math".
+
 2003-05-11  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* .: Releasing Twisted 1.0.6alpha1. There was a problem
